--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,12 @@ local.properties
 buck-out/
 \.buckd/
 *.keystore
-      
+
+android/.gradle
+android/.idea
+android/gradle
+android/android.iml
+android/gradlew
+android/gradlew.bat
+android/local.properties
+
